# cpp

./: .clang-format  .gitignore  COMPILE_GUIDE.md  CPP_ADVANCED_ARCHITECTURE.md  CPP_BASICS_CURRICULUM.md  CPP_CS_FOUNDATION.md  CURRICULUM.md  GEMINI.md  LEARNER_PROFILE.md  antigravity folder management.md  compile_flags.txt  stl_vector.cpp
.memory/: blueprint.md  session_checkpoint.md
1000/: main.cpp
1001/: main.cpp
1008/: main.cpp
10171/: main.cpp
10866/: main.cpp
10998/: main.cpp
2557/: main.cpp
algorithm/: README.md  concept_advanced_stack.md  concept_deque.md  concept_deque_node.md  concept_deque_stl.md  concept_linked_list.md  concept_list_stl.md  concept_pointer_swap.md  concept_queue.md  concept_stack.md  concept_stl_queue.md  (+6 more)
cpp_basics/module_10/: CMakeLists.txt  Calculator.cpp  Calculator.h  Commit.cpp  Commit.h  CommitAnalyzer.cpp  CommitAnalyzer.h  Equipment.h  Quest.h  QuestJournal.cpp  QuestJournal.h  README.md  Registry.h  concept_cmake_basics.md  concept_git_basics.md  concept_unit_test.md  concept_vcpkg_basics.md  main.cpp  practice_cumulative_10_1.cpp  practice_gtest.cpp  practice_json.cpp  practice_manual_test.cpp  test_commit_analyzer.cpp  test_quest_journal.cpp
cpp_basics/module_10/.cache/clangd/index/: Calculator.cpp.56E7EFE11F247D8F.idx  Calculator.h.FBCF4CD96E779E46.idx  Commit.cpp.4729BFCD8E1F3096.idx  Commit.h.BB4FC516419DDF98.idx  CommitAnalyzer.cpp.BF46299B4286A1E2.idx  CommitAnalyzer.h.03E164F485C37568.idx  Equipment.h.B556CC679A3740E4.idx  Quest.h.3ED62E6278FE9610.idx  QuestJournal.cpp.DB6E8DF7C38B53F4.idx  QuestJournal.h.754F5DE1F9D07036.idx  Registry.h.2CB793FCC81DA7DF.idx  main.cpp.659DBC591F2E927E.idx  practice_cumulative_10_1.cpp.D1581A8579E72D1D.idx  practice_gtest.cpp.5F0383778E66745C.idx  practice_json.cpp.FAC21555D8DE075F.idx  test_commit_analyzer.cpp.66B8013069A4EC0D.idx  test_quest_journal.cpp.53950026B510D140.idx
cpp_basics/module_11/: CMakeLists.txt  DungeonRaid.cpp  DungeonRaid.h  Monster.cpp  Monster.h  README.md  compile_commands.json  concept_jthread.md  concept_mutex.md  concept_thread_basics.md  practice_jthread.cpp  practice_mutex.cpp  practice_threads.cpp  test_dungeon_raid.cpp
cpp_basics/module_11/.cache/clangd/index/: DungeonRaid.cpp.675E1A6CEEEA569F.idx  DungeonRaid.h.EAD21AA67DE329BA.idx  Monster.cpp.FBF8EE8D1B9507AE.idx  Monster.h.F312A56007224020.idx  test_dungeon_raid.cpp.39486A936E102568.idx
cpp_basics/module_12/: CMakeLists.txt  README.md  appendix_endianness.md  appendix_singleton.md  concept_addressing_bind.md  concept_connect_accept.md  concept_send_recv.md  concept_tcp_protocol.md  concept_winapi_types.md  concept_winsock_setup.md  practice_client_connect.cpp  practice_echo_server.cpp  practice_endianness.cpp  practice_server_accept.cpp  practice_server_setup.cpp  practice_talk_client.cpp  practice_tcp_socket.cpp  practice_winsock_setup.cpp
cpp_basics/module_12/.cache/clangd/index/: practice_client_connect.cpp.7232EC321833964F.idx  practice_server_accept.cpp.0E7E1E13B07DEE7F.idx  practice_server_setup.cpp.E91CE4D5F24F81D3.idx  practice_tcp_socket.cpp.27CAD8BDE329781B.idx  practice_winsock_setup.cpp.95DBD0ACACA2D471.idx
(+267 files in other folders)
